# sre-rca-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATAMODEL.md  Dockerfile  LICENSE  OUTLINE.md  README.md  SECURITY.md  TRACKER.md  docker-compose.yml  go-live-tracker.md  main.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.playwright-cli/: page-2026-02-05T03-08-23-481Z.yml  page-2026-02-05T03-08-30-119Z.yml  page-2026-02-05T03-08-41-153Z.yml  page-2026-02-05T03-09-01-507Z.yml  page-2026-02-05T03-09-15-039Z.yml
api/: copilotkit_agent.py  main.py
catalog/: instances.yaml  rca-tools.schema.json  rca-tools.schema.yaml
catalog/examples/: instances.full.yaml
catalog/seeds/: demo.instances.yaml
core/: config.py  db.py  environment.py  kb.py  models.py  onboarding_agent.py  orchestrator.py  persistence.py  persistence_models.py  prompts.py  registry.py  scoring.py  tracing.py
docs/: demo.md  flows.md  new-agent.md  onboarding.md  ui-prompts-text.md  ui-prompts.md
frontend/: .eslintrc.json  Dockerfile  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-rca-agent.ts
frontend/lib/: api.ts
kb/: example.yaml  example2.yaml  subjects.yaml
kb/seeds/: demo.subjects.yaml
providers/: __init__.py
providers/alerting/: grafana.py
providers/build_tracker/: __init__.py  github_actions_builds.py
providers/deploy_tracker/: github_actions.py
providers/log_store/: loki.py
providers/metrics_store/: __init__.py  prometheus.py
providers/runtime/: __init__.py  kubectl.py
providers/trace_store/: __init__.py  jaeger.py
providers/vcs/: github.py
scripts/: __init__.py  demo_reset.py  demo_trigger.py  render_ui_prompt.py  validate_kb.py
tests/: conftest.py
tests/fixtures/: kb.yaml  webhook.json
tests/integration/: test_action_and_audit.py  test_api.py  test_orchestrator_flow.py  test_ui_milestones.py
tests/unit/: test_api_endpoints.py  test_config_env.py  test_db.py  test_environment.py  test_github_actions_provider.py  test_github_vcs_provider.py  test_kb.py  test_loki_provider.py  test_onboarding_agent.py  test_onboarding_api_agent.py  test_orchestrator_helpers.py  test_orchestrator_units.py  test_providers.py  (+6 more)
ui/: .env.example  README.md  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
(+36 files in other folders)
