[project]
name = "sre-rca-agent"
version = "0.1.0"
description = "SRE RCA agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
